# RTrees_Point_Location_in_C

./: CMakeLists.txt  README.md
RTree_from_superliminal/: CARD.c  Index.c  Index.h  NODE.c  RECT.c  SPHVOL.c  Split_l.c  Split_q.c  Test.c
include/: GnuplotExporter.h  RTreeWrapper.h  mesh.h  mesh_io.h
latex/: report.tex
meshes/: mesh2-tp2.mesh
plots/: placeholder.txt
src/: GnuplotExporter.c  RTreeWrapper.c  main.c  mesh.c  mesh_io.c
